package hcmuaf.edu.vn.fit.notification_service.client;


import hcmuaf.edu.vn.fit.notification_service.dto.response.LecturerResponse;
import hcmuaf.edu.vn.fit.notification_service.dto.response.SinhVienResponse;
import hcmuaf.edu.vn.fit.notification_service.dto.response.UserResponse;
import org.springframework.cloud.openfeign.FeignClient;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PathVariable;

@FeignClient(
        name = "user-service",
        url = "${clients.user-service.url:http://localhost:8081/api/v1/user-service}",
        configuration = FeignConfig.class
)
public interface UserClient {

    @GetMapping("/users/{id}")
    UserResponse getUser(@PathVariable("id") String id);


    @GetMapping("/admin/users/{userId}")
    SinhVienResponse getSinhVien(@PathVariable("userId") String id);


    @GetMapping("/lecturer/lecturers/{lecturerId}")
    LecturerResponse getLecturer(@PathVariable("lecturerId") String lecturerId);

    @GetMapping("/lecturer/lecturers/by-user/{userId}")
    LecturerResponse getLecturerByUserId(@PathVariable("userId") String userId);
    @GetMapping("/lecturers/{lecturerId}/user-id")
    String getUserIdByLecturerId(@PathVariable("lecturerId") String lecturerId);
}

