package hcmuaf.edu.vn.fit.notification_service.dto.response;

public class SinhVienResponse {
    private String id;
    private String avatarUrl;
    private String email;
    private String fullName;
}
