package hcmuaf.edu.vn.fit.notification_service.entity.enums;

public enum NotificationType {
    COURSE_ANNOUNCEMENT,
    ASSIGNMENT_NEW,
    ASSIGNMENT_DUE,
    ASSIGNMENT_SUBMITTED,
    GRADE_UPDATED,
    RUBRIC_FEEDBACK,
    SYSTEM_ALERT
}